fix(mon-pix): hide skip links behind pix banner"

--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -177,3 +177,11 @@ input:invalid {
 a {
   text-decoration: none;
 }
+
+.pix-communication-banner {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
